hphp/hack/test/typecheck/infinite_loop_terminal_bad2.php.exp
File "infinite_loop_terminal_bad2.php", line 5, characters 12-14:
Invalid return type (Typing[4110])
File "infinite_loop_terminal_bad2.php", line 3, characters 15-17:
Expected int
File "infinite_loop_terminal_bad2.php", line 5, characters 12-14:
But got string
