hphp/hack/test/typecheck/infinite_loop_terminal_bad2.php
<?hh // strict

function f(): int {
  while (true) {
    return "a";
  }
}
